--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zgetro/phpflickr",
-    "description": "phpflickr is official client lib of php-client-flickr. here i just added composer file after fork it from dan-coulter/phpflickr. no any intension to harm official Licence",
+    "description": "dan-coulter/phpflickr is official client lib of php-client-flickr. here i just added composer file after fork it from dan-coulter/phpflickr. no any intension to harm official Licence",
     "type": "non",
     "license": "general",
     "authors": [
