--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,11 @@
 {
     "name": "zgetro/phpflickr",
-    "description": "dan-coulter/phpflickr is official client lib of php-client-flickr. here i just added composer file after fork it from dan-coulter/phpflickr. no any intension to harm official Licence",
+    "description": "phpflickr is official client lib of php-client-flickr. here i just added composer file after fork it from dan-coulter/phpflickr. no any intension to harm official Licence",
     "type": "non",
     "license": "general",
     "authors": [
         {
-            "name": "chirag",
-            "email": "chirag7004classic@gmail.com"
+            "name": "chirag"
         }
     ]
 }
